Mon Mar 22 15:03:10 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/parse_doc.pl: uses pdftotext to handle PDF files,
	generates a head record with punctuation intact, extra checks
	for file "wrappers" & check for MS Word signature (no longer
	defaults to catdoc), strip extra punct. from start & end of words,
	rehyphenate text from PDFs, fix handling of minimum word length.

Mon Mar 22 14:38:01 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Plaintext.cc: Use minimum_word_length instead of hardcoded
	constant.

Mon Mar 22 14:33:45 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/Configuration.cc: Fix Add() function to avoid infinite loop
	on some systems, which don't allow all the letters in isalnum() that
	isalpha() does, e.g. accented ones.

	* htdig/HTML.cc: Fix three reported bugs about inconsistent
	handling of space and punctuation in title, href description & head.
	Now makes destinction between tags that cause word breaks and those
	that don't, and which of the latter add space.

Mon Mar 22 14:25:34 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htmerge/docs.cc: Make htmerge -vv report reasons for deleting docs.

	* htmerge/words.cc: Fix to prevent description text words from
	clobbering anchor number of merged anchor text words.

Fri Mar 19 17:09:21 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc: Fix bug where noindex_start was empty, allow case
	insensitive matching of noindex_start & noindex_end.

	* htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
	Fix inconsistencies in documentation for noindex_start & noindex_end.

Fri Mar 19 17:05:16 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc: Add check for <a href=...> tag that is missing a
	closing </a> tag, terminating it at next href.

Fri Mar 19 17:00:18 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Document.cc: Fix check of Content-type header in readHeader(),