@@ -2449,7 +2449,7 @@
 			<em>default:</em>
 		  </dt>
 		  <dd>
-			iso_8859_1
+			C
 		  </dd>
 		  <dt>
 			<em>description:</em>
